@@ -482,6 +482,14 @@ name|DEFAULT_ROOT
 init|=
 literal|"http://www.ibiblio.org/maven/"
 decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|DEFAULT_M2_ROOT
+init|=
+literal|"http://repo1.maven.org/maven2/"
+decl_stmt|;
 specifier|private
 name|String
 name|root
@@ -1308,7 +1316,7 @@ condition|)
 block|{
 name|root
 operator|=
-literal|"http://repo1.maven.org/maven2/"
+name|DEFAULT_M2_ROOT
 expr_stmt|;
 block|}
 if|if
@@ -1336,6 +1344,58 @@ name|ResolverSettings
 name|settings
 parameter_list|)
 block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"Current IBIBLIO ROOT: "
+operator|+
+name|root
+argument_list|)
+expr_stmt|;
+name|boolean
+name|isDefaultRoot
+init|=
+operator|(
+name|root
+operator|==
+literal|null
+operator|||
+operator|(
+operator|!
+name|isM2compatible
+argument_list|()
+operator|&&
+name|root
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+name|DEFAULT_ROOT
+argument_list|)
+operator|)
+operator|||
+operator|(
+name|isM2compatible
+argument_list|()
+operator|&&
+name|root
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+name|DEFAULT_M2_ROOT
+argument_list|)
+operator|)
+operator|)
+decl_stmt|;
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"Current settings: "
+operator|+
+name|settings
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|settings
@@ -1343,9 +1403,7 @@ operator|!=
 literal|null
 operator|&&
 operator|(
-name|root
-operator|==
-literal|null
+name|isDefaultRoot
 operator|||
 name|pattern
 operator|==
@@ -1355,9 +1413,7 @@ condition|)
 block|{
 if|if
 condition|(
-name|root
-operator|==
-literal|null
+name|isDefaultRoot
 condition|)
 block|{
 name|String
